<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical"
    android:background="@drawable/background3">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            style="@style/TextAppearance.AppCompat.Large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:gravity="center"
            android:text="@string/collecting_answer" />

        <TextView
            android:id="@+id/fragment_pending_text_done"
            style="@style/TextAppearance.AppCompat.Light.SearchResult.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_weight="0"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/players_done" />

        <LinearLayout
            android:id="@+id/doneLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:animateLayoutChanges="true"
            android:orientation="vertical" />

        <TextView
            android:id="@+id/fragment_pending_text_waiting"
            style="@style/TextAppearance.AppCompat.Light.SearchResult.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_weight="0"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/waiting_players" />

        <LinearLayout
            android:id="@+id/waitingLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:animateLayoutChanges="true"
            android:orientation="vertical" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="bottom"
            android:orientation="vertical">

            <com.balysv.materialripple.MaterialRippleLayout
                android:id="@+id/nextButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:mrl_rippleOverlay="true"
                app:mrl_rippleRoundedCorners="@dimen/button_rounded_corner">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/rounded_button_green"
                    android:text="@string/next"
                    android:textColor="@color/white" />

            </com.balysv.materialripple.MaterialRippleLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>