<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentStart="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentTop="true"
    android:layout_alignParentEnd="true"
    android:layout_alignParentRight="true"
    android:layout_alignParentBottom="true"
    android:gravity="center_vertical"
    android:isScrollContainer="true"
    android:orientation="vertical"
    android:scrollbars="horizontal|vertical">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="101dp"
        android:fontFamily="@font/bigelow_rules"
        android:text="Ubinity Games"
        android:textAlignment="center"
        android:textSize="60sp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:text="presents"
        android:textAlignment="center"
        android:textSize="16sp" />

    <TextView
        style="@style/TextAppearance.AppCompat.Large"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:fontFamily="@font/dancing_script"
        android:gravity="center"
        android:text="ReMark!"
        android:textAllCaps="false"
        android:textSize="30sp"
        android:textStyle="normal" />

    <LinearLayout
        android:layout_width="367dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <com.balysv.materialripple.MaterialRippleLayout
            android:id="@+id/main_btn_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:mrl_rippleOverlay="true"
            app:mrl_rippleRoundedCorners="@dimen/button_rounded_corner">

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/rounded_button_green"
                android:gravity="center"
                android:text="@string/main_btn_account"
                android:textColor="@color/white" />

        </com.balysv.materialripple.MaterialRippleLayout>

        <com.balysv.materialripple.MaterialRippleLayout
            android:id="@+id/main_btn_join"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:mrl_rippleOverlay="true"
            app:mrl_rippleRoundedCorners="@dimen/button_rounded_corner">

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/rounded_button_green"
                android:gravity="center"
                android:text="@string/main_btn_join"
                android:textColor="@color/white" />

        </com.balysv.materialripple.MaterialRippleLayout>

        <com.balysv.materialripple.MaterialRippleLayout
            android:id="@+id/main_btn_create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:mrl_rippleOverlay="true"
            app:mrl_rippleRoundedCorners="@dimen/button_rounded_corner">

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/rounded_button_green"
                android:gravity="center"
                android:text="@string/main_btn_create"
                android:textColor="@color/white" />

        </com.balysv.materialripple.MaterialRippleLayout>

        <com.balysv.materialripple.MaterialRippleLayout
            android:id="@+id/main_btn_tutorial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:mrl_rippleOverlay="true"
            app:mrl_rippleRoundedCorners="@dimen/button_rounded_corner">

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/rounded_button_green"
                android:gravity="center"
                android:text="@string/main_btn_tutorial"
                android:textColor="@color/white" />

        </com.balysv.materialripple.MaterialRippleLayout>

        <com.balysv.materialripple.MaterialRippleLayout
            android:id="@+id/main_btn_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:mrl_rippleOverlay="true"
            app:mrl_rippleRoundedCorners="@dimen/button_rounded_corner">

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/rounded_button_green"
                android:gravity="center"
                android:text="@string/main_btn_about"
                android:textColor="@color/white" />

        </com.balysv.materialripple.MaterialRippleLayout>

    </LinearLayout>

</LinearLayout>